--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,8 +1,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Fira Code Nerd Font";
-    font-size: 16px;
+    font-family: "CaskaydiaCove Nerd Font";
+    font-size: 14px;
     min-height: 0;
 }
 
@@ -13,7 +13,10 @@ window#waybar {
 
 #window {
     font-weight: bold;
-    font-family: "Fira Code Nerd Font";
+    border-radius: 0;
+    font-family: "CaskaydiaCove Nerd Font";
+    font-size: 14px;
+    min-height: 0;
 }
 /*
 #workspaces {
